# controllers/admin-controller.js
@@ -2,7 +2,8 @@ const userService = require("../service/user-service");
 const { validationResult } = require("express-validator");
 const ApiError = require("../exceptions/api-error");
 const Notification = require("../models/notification-model.js");
-
+const User = require("../models/user-model.js");
+const Data = require("../models/Data.js");
 class AdminController {
   async getUsers(req, res, next) {
     try {
@@ -36,6 +37,29 @@ class AdminController {
     }
   }
 
+  async addNotification(req, res, next) {
+    try {
+      const { userId, type, message, dueDate } = req.body;
+      const userExists = await User.findById(userId);
+      if (!userExists) {
+        console.log(userId);
+        return res.status(404).json({ error: "User not found." });
+      }
+      console.log(userId);
+
+      const notification = new Notification({
+        userId,
+        type,
+        message,
+        dueDate,
+      });
+      await notification.save();
+      res.status(201).json({ message: "Notification created successfully.", notification });
+    } catch (e) {
+      next(e);
+    }
+  }
+
   async getNotification(req, res, next) {
     try {
       const notifications = await Notification.find();
@@ -60,15 +84,132 @@ class AdminController {
     if (!userId) {
       return res.status(400).json({ error: "userId is required" });
     }
-    // Пример данных
-    const data = {
-      userId,
-      pulse: 70,
-      activityLevel: 3,
-      stressLevel: 2,
-      sleepHours: 7,
-    };
-    res.status(200).json(data);
+    const userDataExists = await Data.find({ userId });
+    const finallData = [];
+
+    if (userDataExists) {
+      for (let i = 0; i < userDataExists.length; i++) {
+        // Пример данных
+        const data = {
+          userId,
+          temperature: userDataExists[i].temperature,
+          heartRate: userDataExists[i].heartRate,
+          steps: userDataExists[i].steps,
+          createdAt: userDataExists[i].createdAt,
+        };
+        finallData.push(data);
+      }
+      res.status(200).json(finallData);
+    } else {
+      console.log("No data found for the given user ID.");
+    }
+  }
+
+  async getAverageHealthData(req, res, next) {
+    try {
+      const { userId } = req.query;
+      if (!userId) {
+        return res.status(400).json({ error: "userId is required" });
+      }
+
+      const userDataExists = await Data.find({ userId });
+      let sumTemp = 0;
+      let sumPulse = 0;
+      let sumSteps = 0;
+
+      if (userDataExists) {
+        for (let i = 0; i < userDataExists.length; i++) {
+          sumTemp += userDataExists[i].temperature;
+          sumPulse += userDataExists[i].heartRate;
+          sumSteps += userDataExists[i].steps;
+        }
+        const { email } = await User.findById(userId);
+
+        const data = {
+          messageTemp: `Average temperature for user with ID - ${userId} is ${sumTemp / userDataExists.length} `,
+          messageHeartRate: `Average pulse for user with ID - ${userId} is ${sumPulse / userDataExists.length} `,
+          messageSteps: `Average pulse for user with ID - ${userId} is ${sumSteps / userDataExists.length} `,
+          userEmail: email,
+        };
+        res.status(200).json(data);
+      } else {
+        console.log("No data found for the given user ID.");
+      }
+    } catch (e) {
+      next(e);
+    }
+  }
+
+  async getAverageTemperature(req, res, next) {
+    const { userId } = req.query;
+    if (!userId) {
+      return res.status(400).json({ error: "userId is required" });
+    }
+
+    const userDataExists = await Data.find({ userId });
+    let sum = 0;
+    if (userDataExists) {
+      for (let i = 0; i < userDataExists.length; i++) {
+        sum += userDataExists[i].temperature;
+      }
+      const { email } = await User.findById(userId);
+
+      const data = {
+        message: `Average temperature for user with ID - ${userId} is ${sum / userDataExists.length} `,
+        userEmail: email,
+      };
+      res.status(200).json(data);
+    } else {
+      console.log("No data found for the given user ID.");
+    }
+  }
+
+  async getAverageHeartRate(req, res, next) {
+    const { userId } = req.query;
+    if (!userId) {
+      return res.status(400).json({ error: "userId is required" });
+    }
+
+    const userDataExists = await Data.find({ userId });
+    let sum = 0;
+    if (userDataExists) {
+      for (let i = 0; i < userDataExists.length; i++) {
+        sum += userDataExists[i].heartRate;
+      }
+      const { email } = await User.findById(userId);
+
+      const data = {
+        message: `Average pulse for user with ID - ${userId} is ${sum / userDataExists.length} `,
+        userEmail: email,
+      };
+      res.status(200).json(data);
+    } else {
+      console.log("No data found for the given user ID.");
+    }
+  }
+
+  async getAverageSteps(req, res, next) {
+    const { userId } = req.query;
+    if (!userId) {
+      return res.status(400).json({ error: "userId is required" });
+    }
+
+    const userDataExists = await Data.find({ userId });
+    let sum = 0;
+    if (userDataExists) {
+      for (let i = 0; i < userDataExists.length; i++) {
+        sum += userDataExists[i].steps;
+      }
+      const { email } = await User.findById(userId);
+
+      const data = {
+        message: `Average steps for user with ID - ${userId} is ${sum / userDataExists.length} `,
+        userEmail: email,
+      };
+      res.status(200).json(data);
+    } else {
+      console.log("No data found for the given user ID.");
+    }
   }
 
   async getUsers(req, res, next) {
